XWIKI-19157: Make the real-time WYSIWYG editor work in-place also XWIKI-19156: Bundle the real-time WYSIWYG editor in XWiki Standard * Move the code that depends on CKEditor from xwiki-platform-realtime-wysiwyg to xwiki-platform-ckeditor (the code left in xwiki-platform-realtime-wysiwyg should work, more or less, with any rich text editor) * Enable realtime editing as a CKEditor plugin (because it's easier to manage), rather than by defining a new editor ("Realtime CKEditor") * Move the user caret indicator styles to a CSS file and change the way styles are loaded in order to work with the in-place editor. * Change the name of the CKEditor instance used when editing in-place, from 'xwiki-content' to 'content', in order to be consistent with the standalone WYSIWYG edit mode and also because we're now using the CKEditor instance name to create the Netflux channel path and we want the in-place editor and the standalone editor to be part of the same real-time session. * Make the in-place editor set 'XWiki.editor' value to "wysiwyg" while we are editing, in case some JavaScript code is relying on this (like the real-time code which gets activated currently only when 'XWiki.editor' matches the real-time editor type). * Refactor the code that computes the Netflux channel paths to make it generic so that it works with any document field, not just the document content (preparing the ground for real-time forms). * Refactor and fix the autosave * Add support for having the in-place editor join the same real-time session as the standalone editor, by making the root of the HyperJSON we sync independent of the type of WYSIWYG editor (BODY vs. DIV). * Refactor the generic real-time WYSIWYG editing code to improve readability
(cherry picked from commit 22be277d5bc90abea705688d50a4ce3b3defc90e)

--- a/xwiki-platform-core/xwiki-platform-realtime/xwiki-platform-realtime-wysiwyg/xwiki-platform-realtime-wysiwyg-webjar/src/main/webjar/wysiwygEditor.css
+++ b/xwiki-platform-core/xwiki-platform-realtime/xwiki-platform-realtime-wysiwyg/xwiki-platform-realtime-wysiwyg-webjar/src/main/webjar/wysiwygEditor.css
@@ -33,3 +33,18 @@ div.rt-toolbar .rt-user-fake-avatar {
   margin: 0 3px 0 0;
   vertical-align: middle;
 }
+
+.rt-user-position {
+  position : absolute;
+  width : 15px;
+  height: 15px;
+  display: inline-block;
+  background : #CCCCFF;
+  border : 1px solid #AAAAAA;
+  text-align : center;
+  line-height: 15px;
+  font-size: 11px;
+  font-weight: bold;
+  color: #3333FF;
+  user-select: none;
+}
